# shrike-ai-lab

./: .env.example  .gitignore  AGENTS.md  HARDWARE_MODEL_MISMATCH.md  IMPLEMENTATION_COMPLETE.md  MODEL_SELECTION_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  shrike_ai_cli.py
.github/: copilot-instructions.md
.github/workflows/: tests.yml
agents/autonomous/: README.md  crewai_config.py  docker-compose.openhands.yml  gitlark_memdiff_team.py  requirements.txt  team_types.py  test_automation_team.py
agents/code-review/: README.md  review_agent.py
agents/documentation/: documentation_agent.py
configs/: agent_team_promotion_thresholds.json  agent_team_queue_mapping.json  agent_team_rollout.json  litellm_config.yaml
docs/: AGENT_TEAM_IMPLEMENTATION_PLAN.md  ROADMAP_YEAR1.md  SPECPILOT_INTEGRATION.md
docs/integrations/: BILLWATCH_INTEGRATION.md  GITLARK_INTEGRATION.md  SPECPILOT_INTEGRATION.md
docs/ops/: CRASH_MITIGATION_GUIDE.md  README.md  (+2 more)
notebooks/: Training_Ops_Dashboard.ipynb
scripts/: ab_eval_gate.py  auto_apply_agent_team_promotions.py  benchmark.py  benchmark.sh  crash-diagnostics.ps1  decide_agent_team_promotion.py  eval_learning_trend.py  evaluate.py  evaluate_agent_teams.py  export_model.py  learning_snapshot.py  log_layout.py  ops-ab-gate.ps1  ops-notify-readyreview.ps1  ops-results.ps1  ops-status.ps1  ops-watch-readyreview.ps1  organize_logs.py  queue.cmd  queue_ops.ps1  recover_after_crash.py  register-startup.ps1  register_windows_startup.ps1  resume_agent_team_rollout.py  review_ab_gates.py  run_agent_teams.py  setup-windows.sh  setup.sh  start_agent_team_bootstrap.py  start_nightly_queue.ps1  start_nightly_queue.py  startup-launcher.bat  startup-recovery.ps1  train-with-monitoring.ps1  train.py  train_progress.py  train_queue.py  training_intervention_board.py  validate_training_pipeline.py  verify_cline_local_setup.py  (+1 more)
tests/: test_agent_team_benchmark.py  test_agent_team_promotion.py  test_agent_teams.py  test_config.py  test_llm_connection.py  test_training_data.py
(+85 files in other folders)
