[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shrike-ai-lab"
version = "0.1.0"
description = "Local LLM infrastructure for Shrike Labs projects"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Shrike Labs LLC", email = "mark@shrikelabsllc.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.21.0",
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
training = [
    "transformers>=4.38.0",
    "datasets>=2.18.0",
    "peft>=0.9.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.42.0",
    "trl>=0.7.0",
]
agents = [
    "crewai>=0.28.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
all = [
    "shrike-ai-lab[training,agents,dev]",
]

[project.scripts]
shrike-ai = "shrike_ai_cli:app"

[project.urls]
Homepage = "https://github.com/markhint22/shrike-ai-lab"
Documentation = "https://github.com/markhint22/shrike-ai-lab#readme"
Repository = "https://github.com/markhint22/shrike-ai-lab.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "agents*", "training*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
